--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    
     <div class="hero">
-        <h1>The Cow</h1>
+        <h1>THE COW</h1>
     </div>
 </body>
 </html>
