Practice done till class

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeetShop</title>
     <link rel="stylesheet" href="design.css">
+    <link rel="icon" type="image/x-icon" href="images/fav.ico">
 </head>
 <body>
     <div class="hero">
         <h1>THE COW</h1>
+    </div>
+    <div class="article">
+        <h2>An assay about Cow</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit ullam repudiandae nulla, placeat similique inventore voluptatem sed facilis officia soluta quae vitae in, eveniet ipsum nisi alias ratione voluptates? Eligendi, quas similique minima vel ex consectetur ducimus quia explicabo, numquam optio sequi distinctio illum quod. A quas illo delectus culpa dolor, quasi aliquam nisi voluptatem odit exercitationem non soluta laudantium, fuga corporis minima blanditiis, voluptates aut ab. Quibusdam tenetur inventore dolore libero esse qui totam consectetur laboriosam et ex dignissimos magni porro hic suscipit provident nostrum, voluptas nam? Iusto, sed similique. Ipsam voluptatem laudantium, aliquam quod ipsum possimus tempore adipisci placeat. Quasi, adipisci inventore, explicabo obcaecati facilis neque accusantium temporibus quia quod odio sapiente est et atque id qui repudiandae itaque nam incidunt exercitationem quae nisi, perferendis ea eos! Vitae, ipsum? Repellendus iusto obcaecati eius nemo quisquam repellat earum veritatis ea necessitatibus optio delectus consequatur soluta, eligendi autem placeat amet sint ad laudantium recusandae impedit maxime odit. Quod veniam accusamus totam hic sed! Maxime quidem consequuntur omnis nisi recusandae rem illo laboriosam cupiditate, similique accusamus possimus nostrum temporibus deserunt, voluptatum accusantium ratione placeat autem doloribus voluptates? Omnis assumenda odio accusantium eius consectetur aspernatur laborum error. Ut reiciendis, consequuntur nostrum facere fugit ullam numquam. Ducimus veniam quas doloribus earum delectus corrupti nesciunt ab assumenda impedit, molestiae, tempora harum ullam facilis sunt repudiandae asperiores illum eos eius eligendi sapiente natus? Repudiandae rerum quis doloribus vero, tenetur cupiditate commodi dignissimos corporis et optio laboriosam molestiae architecto. Distinctio, cumque necessitatibus voluptatem architecto quas delectus voluptatibus modi nobis non a. Blanditiis quo atque vel in voluptas recusandae deleniti commodi vero laudantium, at iusto distinctio error dolorem unde, reiciendis, numquam eaque aperiam? Illo alias laborum dolore, odit laudantium soluta cumque maxime necessitatibus inventore libero sed sequi fuga quia nemo et hic iste, exercitationem saepe? Perspiciatis excepturi repellat quibusdam veritatis quidem aliquid omnis eligendi exercitationem fugiat, voluptatem nostrum. Nesciunt odio animi atque repellendus, ea ratione dolore nostrum explicabo accusamus beatae nobis, voluptatum harum alias, fugiat illum et eaque corrupti. Quae itaque ad aspernatur, iste quos aut dicta, eveniet repudiandae qui iure voluptatem accusamus nesciunt magnam doloremque molestiae quasi voluptate quisquam blanditiis. Temporibus repellat quod dolorum, veritatis velit fuga deleniti perspiciatis, quia quo nihil impedit vero quisquam illum similique eveniet eos ex, ipsam nam distinctio. Eaque animi ab iure id sit illo fugit asperiores odit architecto unde. Ut ipsa expedita officia recusandae quisquam voluptatem delectus explicabo fuga eos.</p>
+    </div>
+    <div class="content">
+        <div class="img">
+            <img src="images/cow2.jpg" alt="cow pic">
+        </div>
+        <div class="img">
+            <img src="images/cow3.jpg" alt="cow pic">
+        </div>
+        <div class="img">
+            <img src="images/cow4.jpg" alt="cow pic">
+        </div>
     </div>
 </body>
 </html>
